# skywave

./: .gitignore  LICENSE  README.md  ardop_adapter.py  armstrong_adapter.py  armstrong_aloop.conf  bench_pipes.py  channel.py  channel_config.py  channel_profile.py  channel_sim.py  example_loopback_adapter.py  fm_rig.py  hfchan.py  mercury_adapter.py  modem_adapter.py  pyproject.toml  rig_effects.py  rig_version.py  sock_alsa_shim.py  sweep_runner.py  transport_profile.py  watterson.py
docs/: BANDWIDTH.md  CHANNEL-CONDITIONS.md  CHANNEL-MODEL.md  COMPARISON.md  CROSS-CALIBRATION.md  EQUAL-PEP.md  FM-PORT.md  MODEM-ADAPTER-CONTRACT.md  PORTABILITY.md  QRM-MODEL.md  REAL-AUDIO-RIG.md  TRANSPORT-DESIGN.md  TRANSPORT.md
profiles/: clean.toml  poor-weak-ack.toml  poor.toml
tests/: conftest.py  test_adapter_registry.py  test_armstrong_adapter.py  test_asymmetric_channel.py  test_channel.py  test_channel_config.py  test_channel_profile.py  test_connect_retry.py  test_default_profile.py  test_fm_fade.py  test_fm_port.py  test_hd_gate.py  test_hfchan.py  test_link_delay.py  test_mercury_fifo.py  test_mercury_sock.py  test_modem_adapter.py  test_noise_calibration.py  test_perf_headroom.py  test_platform.py  test_ptt_isolation.py  test_ptt_plumbing.py  test_rail_guard.py  test_results_schema.py  test_rig_bpf.py  test_rig_effects.py  test_rx_pad.py  test_sock_transport.py  test_sweep_spec.py  test_tr_jitter.py  test_transport_profile.py  test_tx_chain.py  test_virtual_lockstep.py  test_watterson_physics.py  test_watterson_verify.py
transports/: alsa-native.toml  (+2 more)
(+30 files in other folders)
