[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "skywave"
version = "0.1.0"
description = "HF/VHF radio channel simulator and comparative modem test harness"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Steve Pinkham" }]
keywords = [
    "hf", "vhf", "ham-radio", "amateur-radio", "channel-simulator",
    "watterson", "modem", "openarq", "dsp",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Ham Radio",
    "Topic :: Scientific/Engineering",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://openarq.org"
Repository = "https://github.com/openarq-project/skywave"

[project.scripts]
# One-way channel filter (codec2 `ch`-compatible).
hfchan = "skywave.hfchan:main"
# Comparative sweep runner across the adapter registry.
skywave-sweep = "skywave.sweep_runner:main"
# The half-duplex channel-sim process (usually spawned by the harness).
skywave-channel = "skywave.channel_sim:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"skywave.adapters" = ["*.conf"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
